新增 API 文档、学校认证审核接口及 S2 编译问题修复
- 新增 docs/api.md 完整 API 文档（基于 S1 + S2 设计）
- 学校认证审核 Admin 接口（SchoolVerifyController + 3 VO）
- 修复 AppSocialController 缺失 import、SceneController 分页查询签名、Stream.toList() 改 Collectors.toList()
- 整理 spring1 文档至 docs/s1/ 目录

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>